--- a/eres/static/css/login.css
+++ b/eres/static/css/login.css
@@ -17,7 +17,7 @@ a{
   align-items: center;
   flex-direction: column;
   width: 500px;
-  height: 450px;
+  height: auto;
   color: white;
   background-color: #9face6;
   background: linear-gradient(180deg, #9face6 0%, #74ebd5 100%);
@@ -32,6 +32,7 @@ a{
 .coding{
 display: flex;
 flex-direction: column;
+margin-bottom: 30px;
 }
 
 .opciones{
@@ -126,6 +127,18 @@ background: white;
   outline: 0;
   background: rgba(0, 0, 0, 0.1);
 }
+input.codi{
+  font-size: 20px;
+}
+
+#noc{
+  color: red;
+}
+
+.noc{
+  display: none;
+}
+
 
 @media all and (max-width: 600px){
   .login{
@@ -142,6 +155,7 @@ background: white;
   input.codi{
     height: 40px;
     width: 350px;
+    font-size: 36px;
   }
 
   button{
@@ -168,6 +182,7 @@ background: white;
   input.codi{
     height: 40px;
     width: 300px;
+    font-size: 36px;
   }
 
   button{
@@ -211,6 +226,7 @@ background: white;
   input.codi{
     height: 40px;
     width: 230px;
+    font-size: 36px;
   }
 
   .opciones{
