--- a/eres/templates/menu.html
+++ b/eres/templates/menu.html
@@ -4,24 +4,32 @@
     <meta charset="utf-8">
     <title>menusito</title>
     <meta name="viewport" content="width=device-width; initial-scale=1.0">
-    <link rel="stylesheet" href="css/menu.css">
-    <link rel="stylesheet" href="css/fontawesome/fontawesome-all.min.css">
+          {% load static from staticfiles %}
+    <link rel="stylesheet" href="{% static "css/menu.css" %}">
+    <link rel="stylesheet" href="{% static "css/fontawesome/fontawesome-all.min.css" %}">
   </head>
   <body>
     <header id="header">
       <nav class="menu">
         <div class="logodiv">
-          <a href="#"><img class="logo" src="imagenes/logoeres.png" alt=""></a>
+          <a href="#"><img class="logo" src="{% static "imagenes/logoeres.png" %}" alt=""></a>
           <a href="#" class="btn-menu" id="btn-menu"><i class="icono fa fa-1x fa-bars" aria-hidden="true"></i></a>
         </div>
         <div class="elements">
         <ul id="enlaces">
-          <li id="li"><a href="#" id="efecto">Home</a></li>
-          <li><a href="#">News</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Shop</a></li>
-          <li><a href="#">Cosita</a></li>
+          {% if not user.is_authenticated %}
+          <li id="li"><a href="{% url "login" %}" id="efecto">Iniciar Sesion</a></li>
+          {% else %}
+          <li id="li"><a href="#" id="efecto"><strong>{{user.username}} </strong> </a></li>
+          <li><a href="{% url "logOut" %}">Cerrar Session</a></li>
+            <li><a href="{% url "perfil" %}">Pefil</a></li>
+            <li><a href="#">Eventos</a></li>
+          {% endif %}
+
+
+          <li><a href="#">ERESV</a></li>
+          <li><a href="#">Programas</a></li>
+          <li><a href="#">Contactos</a></li>
           <li><a href="#">Otros</a></li>
         </ul>
         </div>
@@ -33,9 +41,9 @@
 
 
 
-    <script src="js/jquery-3.2.1.min.js" charset="utf-8"></script>
-    <script src="js/headroom.min.js"></script>
-    <script src="js/menu.js"></script>
+    <script src="{% static "js/jquery-3.2.1.min.js" %}" charset="utf-8" ></script>
+    <script src="{% static "js/headroom.min.js" %}"></script>
+    <script src="{% static "js/menu.js" %}"></script>
     <script type="text/javascript">
 
     $(document).ready(function(){
