--- a/eres/static/css/menu1.css
+++ b/eres/static/css/menu1.css
@@ -1,17 +1,14 @@
 * {
 	margin:0;
     padding:0;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif; 
 }
-
-/*EN EL VIDEO HAY UN ERROR POR EL CUAL NO SE VISUALIZA EN GOOGLE CHROME,
-EL CÓDIGO A CONTINUACIÓN YA ESTA CORREGIDO*/
 
 header {
 	margin-top:0px;
     width: 100%;
     overflow: hidden;
-    height: 60px;
+    height: 40px;
     position: relative;
 }
 
@@ -22,7 +19,7 @@ nav {
     right:0;
 	margin:20px auto;
 	max-width:;
-	width:100%;
+    width:100%;
 }
 
 nav ul {
@@ -33,13 +30,13 @@ nav > ul {
 	display:table;
 	/*Quitamos el overflow hidden que estaba aqui*/
 	width:100%;
-	background:#7486eb;
+	background:#0081c6;
     position:relative;
 }
 
 nav > ul li {
     display:table-cell;
-    border: solid#9face6 1px ;
+    border: solid #46cdcf 1px ;
 }
 
 /*Sub-menu*/
@@ -53,7 +50,7 @@ nav > ul li a {
 	color:white;
 	display:block;
 	line-height:20px;
-	padding:5px;
+	padding:10px;
 	position: relative;
 	text-align:center;
 	text-decoration:none;
@@ -75,7 +72,7 @@ nav > ul > li > a span {
 	width:100%;
 	left:0;
 	position:absolute;
-	top:-27px;
+	top:-37px;
 	-webkit-transition: all .3s ease;
 	-moz-transition: all .3s ease;
 	-ms-transition: all .3s ease;
@@ -86,58 +83,74 @@ nav > ul > li > a span {
     justify-content: center;
 }
 
-nav > ul > li > a span .icon {
-
-}
-
 nav > ul > li > a:hover > span {
 	top:0;
 }
 
 /*Colores*/
 nav ul li a .primero {
-	background-color: #9face6;
+	background-color: #46cdcf;
 }
 
 nav ul li a .segundo {
-	background-color: #9face6;
+	background-color: #46cdcf;
 }
 
 nav ul li a .tercero {
-	background-color: #9face6;
+	background-color: #46cdcf;
 }
 
 nav ul li a .cuarto {
-	background-color: #9face6;
+	background-color: #46cdcf;
 }
 
 nav ul li a .quinto {
-	background-color: #9face6;
+	background-color: #46cdcf;
 }
 
 
 @media all and (max-width: 550px){
 
+    
+header {
+	margin-top:0px;
+    width: 100%;
+    overflow: hidden;
+    height: 40px;
+    position: relative;
+}
+
     nav > ul li a {
         color:white;
         display:block;
         line-height:20px;
-        padding:5px;
+        padding:8px;
         position: relative;
         text-align:center;
-        font-size: 12px;
+        font-size: 14px;
+    }
+
+    nav > ul > li > a span {
+        background:#174459;
+        display:block;
+        height:100%;
+        width:100%;
+        left:0;
+        position:absolute;
+        top:-33px;
     }
 
 }
 
 
 @media all and (max-width: 400px){
+    
 
     nav > ul li a {
         color:white;
         display:block;
         line-height:20px;
-        padding:5px;
+        padding:8px;
         position: relative;
         text-align:center;
         font-size: 11px;
@@ -148,14 +161,41 @@ nav ul li a .quinto {
 
 @media all and (max-width: 308px){
 
+    header {
+        margin-top:0px;
+        width: 100%;
+        overflow: hidden;
+        height: 30px;
+        position: relative;
+    }
+
     nav > ul li a {
         color:white;
         display:block;
         line-height:20px;
-        padding:2px;
+        padding:5px;
         position: relative;
         text-align:center;
         font-size: 11px;
+    }
+
+    
+nav > ul > li > a span {
+	background:#174459;
+	display:block;
+	height:100%;
+	width:100%;
+	left:0;
+	position:absolute;
+	top:-27px;
+}
+
+}
+
+@media all and (max-width: 284px){
+
+    nav > ul li a {
+        font-size: 9px;
     }
 
 }
