--- a/eres/templates/acceso.html
+++ b/eres/templates/acceso.html
@@ -5,8 +5,48 @@
     <title>Login</title>
     <meta name="viewport" content="initial-scale=1">
     {% load static from staticfiles %}
+
+    <style media="screen">
+    body{
+      display: flex;
+      justify-content: center;
+      align-items: flex-end;
+      background-image: url("{% static "/imagenes/bosque8.jpg"%} ");
+        background-attachment:fixed;
+        background-repeat: no-repeat;
+        background-position:50% 50%;
+        background-size: cover;
+
+    }
+
+    .container{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+        width: 100%;
+    }
+
+    .login{
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      flex-direction: column;
+      width: 500px;
+      height: 450px;
+      color: white;
+        background-image: url("{% static "/imagenes/bosque8.1.jpg" %}");
+          background-attachment:fixed;
+          background-repeat: no-repeat;
+          background-position:50% 50%;
+          background-color:white;
+          background-size: cover;
+      border-radius: 5px;
+    }
+    </style>
+
     <link rel="stylesheet" href="{% static "css/login.css" %}">
     <link rel="stylesheet" href="{% static "css/font-awesome.min.css" %}">
+
   </head>
   <body>
     <div class="container">
