--- a/eres/templates/profile.html
+++ b/eres/templates/profile.html
@@ -7,13 +7,12 @@
 
       {% load static from staticfiles %}
     <script src="{% static "js/all.min.js" %}"></script>
-    <script src="{% static "js/profile.js" %}"></script>
     <script src="{% static "js/jquery-3.2.1.min.js" %}" charset="utf-8"></script>
 
   <style>
 
 body{
-  background-image:url("{% static "/imagenes/bosque0.jpg" %}") ;
+  background-image:url("static/imagenes/bosque0.jpg") ;
   background-attachment:fixed;
   background-repeat: no-repeat;
   background-position:50% 50%;
@@ -29,7 +28,7 @@ body{
   padding: 5px 0px;
   width: 100%;
   background-color: rgb(0, 0, 0, 0.5);
-  background-image:url("{% static "/imagenes/bosque0.1.jpg" %}") ;
+  background-image:url("static/imagenes/bosque0.1.jpg") ;
   background-attachment:fixed;
   background-repeat: no-repeat;
   background-position:50% 50%;
@@ -48,17 +47,34 @@ body{
   border-radius: 5px;
   margin: 5px 0px 5px 5px;
   background-color: rgba(0, 0, 0, 0.5);
-  background-image:url("{% static "/imagenes/bosque0.1.jpg" %}") ;
+  background-image:url("static/imagenes/bosque0.1.jpg") ;
   background-attachment:fixed;
   background-repeat: no-repeat;
   background-position:50% 50%;
   background-size: cover;
 }
 
+.foto-nombre{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: auto;
+  color: white;
+  font-weight: 600;
+  background-image:url("static/imagenes/camuflaje.jpg");
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  text-align: center;
+
+}
+
+
   </style>
   <link rel="stylesheet" href="{% static "css/profile.css" %}">
   <link rel="stylesheet" href="{% static "css/menu1.css" %}">
-</head>
+  </head>
   <body>
 
    <div class="todo">
@@ -79,101 +95,115 @@ body{
       <div class="div-perfil">
         <div class="div-basicos">
           <div class="foto-nombre">
-          <div style="background-image: url({% static "/imagenes/fotoperfil.jpg" %})" class="foto-perfil"></div>
-          <p>Ronaldo Nombre Largo Gomez FullHD</p>
+          <div style="background-image: url({{per.foto.url}})" class="foto-perfil"></div>
+          <p>{{nombre}}</p>
           </div>
             <div class="div-datos">
-              <div class="datos"><p>E-mail: Ronaldito@gmail.com</p></div>
-              <div class="datos"><p>Telefono: 70425360</p></div>
-              <div class="datos"><p>Destacamento: Búfalos 7</p></div>
+              <div class="datos"> <p class="cosa">Cargo: </p> <p class="cosita"> Soon</p></div>
+              <div class="datos"> <p class="cosa">E-mail: </p> <p class="cosita"> {{us.email}}</p></div>
+              <div class="datos"> <p class="cosa">Telefono: </p> <p class="cosita"> {{per.telefono}}</p></div>
+              <div class="datos"> <p class="cosa">Destacamento: </p> <p class="cosita"> {{per.destacamento}} {{per.destacamento.codigo}}</p></div>
+              <div class="datos"> <p class="cosa">Edad: </p> <p class="cosita"> {{edad}} años</p></div>
+              <div class="datos"> <p class="cosa">Dirección: </p> <p class="cosita"> {{per.direccion}}</p></div>
+
           </div>
         </div>
         <div class="div-logros" >
           <div class="imagen-departamento">
+            {% if edad > 0 and edad <= 7  %}
             <img src="{% static "/imagenes/1.png" %}" alt="">
+            {% elif edad > 7 and edad <= 11 %}
+            <img src="{% static "/imagenes/2.png" %}" alt="">
+            {% elif edad > 11 and edad <= 13 %}
+            <img src="{% static "/imagenes/3.png" %}" alt="">
+            {% elif edad > 13 and edad <= 17 %}
+            <img src="{% static "/imagenes/3.png" %}" alt="">
+            {% else %}
+            <img src="{% static "/imagenes/Royal_Rangers.svg.png" %}" alt="">
+            {%endif%}
           </div>
           <hr/>
           <div class="logros">
             <div class="premios">
-              <img src="{% static "/imagenes/premio1.png" %}" alt="">
+              <img src="static/imagenes/premio1.png" alt="">
             </div>
             <div class="premios">
-                <img src="{% static "/imagenes/premio2.png" %}" alt="">
+                <img src="static/imagenes/premio2.png" alt="">
             </div>
             <div class="premios">
-                <img src="{% static "/imagenes/premio1.png" %}" alt="">
+                <img src="static/imagenes/premio1.png" alt="">
             </div>
             <div class="premios">
-                <img src="{% static "/imagenes/premio2.png" %}" alt="">
+                <img src="static/imagenes/premio2.png" alt="">
             </div>
             <div class="premios">
-              <img src="{% static "/imagenes/premio1.png" %}" alt="">
+              <img src="static/imagenes/premio1.png" alt="">
             </div>
             <div class="premios">
-                <img src="{% static "/imagenes/premio2.png" %}" alt="">
+                <img src="static/imagenes/premio2.png" alt="">
               </div>
               <div class="premios">
-                  <img src="{% static "/imagenes/premio1.png" %}" alt="">
+                  <img src="static/imagenes/premio1.png" alt="">
                 </div>
                 <div class="premios">
-                    <img src="{% static "/imagenes/premio2.png" %}" alt="">
+                    <img src="static/imagenes/premio2.png" alt="">
                   </div>
                   <div class="premios">
-                      <img src="{% static "/imagenes/premio1.png" %}" alt="">
+                      <img src="static/imagenes/premio1.png" alt="">
                     </div>
                     <div class="premios">
-                        <img src="{% static "/imagenes/premio2.png" %}" alt="">
+                        <img src="static/imagenes/premio2.png" alt="">
                       </div>
                       <div class="premios">
-                          <img src="{% static "/imagenes/premio1.png" %}" alt="">
+                          <img src="static/imagenes/premio1.png" alt="">
                         </div>
                         <div class="premios">
-                            <img src="{% static "/imagenes/premio2.png" %}" alt="">
+                            <img src="static/imagenes/premio2.png" alt="">
                           </div>
                           <div class="premios">
-                              <img src="{% static "/imagenes/premio1.png" %}" alt="">
+                              <img src="static/imagenes/premio1.png" alt="">
                             </div>
                             <div class="premios">
-                                <img src="{% static "/imagenes/premio2.png" %}" alt="">
+                                <img src="static/imagenes/premio2.png" alt="">
                               </div>
                               <div class="premios no-ganado">
-                                  <img src="{% static "/imagenes/premio1.png" %}" alt="">
+                                  <img src="static/imagenes/premio1.png" alt="">
                                 </div>
                                 <div class="premios no-ganado">
-                                    <img src="{% static "/imagenes/premio2.png" %}" alt="">
+                                    <img src="static/imagenes/premio2.png" alt="">
                                   </div>
                                   <div class="premios no-ganado">
-                                      <img src="{% static "/imagenes/premio1.png" %}" alt="">
+                                      <img src="static/imagenes/premio1.png" alt="">
                                     </div>
                                     <div class="premios no-ganado">
-                                        <img src="{% static "/imagenes/premio2.png" %}" alt="">
+                                        <img src="static/imagenes/premio2.png" alt="">
                                       </div>
                                       <div class="premios">
-                                        <img src="{% static "/imagenes/premio2.png" %}" alt="">
+                                        <img src="static/imagenes/premio2.png" alt="">
                                       </div>
                                       <div class="premios">
-                                        <img src="{% static "/imagenes/premio2.png" %}" alt="">
+                                        <img src="static/imagenes/premio2.png" alt="">
                                       </div>
                                       <div class="premios">
-                                        <img src="{% static "/imagenes/premio2.png" %}" alt="">
+                                        <img src="static/imagenes/premio2.png" alt="">
                                       </div>
                                       <div class="premios">
-                                        <img src="{% static "/imagenes/premio2.png" %}" alt="">
+                                        <img src="static/imagenes/premio2.png" alt="">
                                       </div>
                                       <div class="premios">
-                                        <img src="{% static "/imagenes/premio2.png" %}" alt="">
+                                        <img src="static/imagenes/premio2.png" alt="">
                                       </div>
                                       <div class="premios">
-                                <img src="{% static "/imagenes/premio2.png" %}" alt="">
+                                <img src="static/imagenes/premio2.png" alt="">
                               </div>
                               <div class="premios">
-                                <img src="{% static "/imagenes/premio2.png" %}" alt="">
+                                <img src="static/imagenes/premio2.png" alt="">
                               </div>
                               <div class="premios">
-                                <img src="{% static "/imagenes/premio2.png" %}" alt="">
+                                <img src="static/imagenes/premio2.png" alt="">
                               </div>
                               <div class="premios">
-                                <img src="{% static "/imagenes/premio2.png" %}" alt="">
+                                <img src="static/imagenes/premio2.png" alt="">
                               </div>
 
           </div>
