--- a/eres/templates/registro.html
+++ b/eres/templates/registro.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="initial-scale=1">
     {% load static from staticfiles %}
 
-    <link rel="stylesheet" href="{% static "css/login.css" %}">
-    <link rel="stylesheet" href="{% static "css/font-awesome.min.css" %}">
-
     <script type="text/javascript">
     function ValidarNumero(e, campo){
 
@@ -17,7 +14,47 @@
   }
     </script>
 
-  </head>
+    <style media="screen">
+    body{
+      display: flex;
+      justify-content: center;
+      align-items: flex-end;
+      background-image: url("{% static "/imagenes/bosque8.jpg"%} ");
+      background-attachment:fixed;
+      background-repeat: no-repeat;
+      background-position:50% 50%;
+      background-size: cover;
+    }
+
+    .container{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+    }
+
+    .login{
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      flex-direction: column;
+      width: 500px;
+      height: auto;
+      color: white;
+      background-image: url("{% static "/imagenes/bosque8.1.jpg" %}");
+      background-attachment:fixed;
+      background-repeat: no-repeat;
+      background-position:50% 50%;
+      background-color:white;
+      background-size: cover;
+      border-radius: 5px;
+    }
+    </style>
+
+    <link rel="stylesheet" href="{% static "css/login.css" %}">
+    <link rel="stylesheet" href="{% static "css/font-awesome.min.css" %}">
+
+</head>
   <body>
     <div class="container">
 
@@ -26,7 +63,7 @@
       <img class="emblema" src="{% static "imagenes/eres.png" %}" alt="">
 
       <div class="coding">
-        <label for="psw"><b class="codigo">Usuario</b></label>
+        <label style="margin-top:8px; margin-bottom:2px;" for="psw"><b class="codigo">Usuario</b></label>
         {{ form.username }}
         {{ form.username.errors }}
 
@@ -34,23 +71,23 @@
       </div>
 
       <div class="coding">
-           <label for="psw"><b class="codigo">E-Mail</b></label>
+           <label style="margin-top:8px; margin-bottom:2px;" for="psw"><b class="codigo">E-Mail</b></label>
           {{ form.email }}
           {{ form.email.errors }}
 
       </div>
 
       <div class="coding">
-        <label for="psw"><b class="codigo">Ingrese una contraseña</b></label>
+        <label  style="margin-top:8px; margin-bottom:2px;" for="psw"><b class="codigo">Ingrese una contraseña</b></label>
         {{ form.password }}
         {{ form.password.errors }}
 
       </div>
 
       <div class="coding">
-        <label for="psw"><b class="codigo">Repita la contraseña</b></label>
+        <label style="margin-top:2px; margin-bottom:8px;" for="psw"><b class="codigo">Repita la contraseña</b></label>
            <input class="codi" onkeypress='javascript: return ValidarNumero(event,this)' id="p2" type="password" placeholder="Contraseña"  required="True">
-           <label id="noc" for="psw"><b id="coin" class="codigo noc">la contraseña no coinside</b></label>
+           <label style="margin-top:2px; margin-bottom:8px;" id="noc" for="psw"><b id="coin" class="codigo noc">la contraseña no coinside</b></label>
       </div>
 
 
@@ -60,9 +97,9 @@
 
       <div class="opciones">
 
-        <label class="opcions1"><a href="#">Registrarme</a></label>
+        <label style="margin:15px 0px;" class="opcions1"><a href="#">Registrarme</a></label>
 
-        <label class="opcions1"><a href="#">¿Olvide mi contraseña?</a></label>
+        <label style="margin:15px 0px;" class="opcions1"><a href="#">¿Olvide mi contraseña?</a></label>
       </div>
     </form>
     </div>
