--- a/eres/templates/acceso.html
+++ b/eres/templates/acceso.html
@@ -60,7 +60,7 @@
         {{ form.codigo }}
         {{ form.codigo.errors }}
         <br><br><br>
-<label for="psw"><b class="codigo">El codigo de acceso se obtiene con su coodirnador</b></label>
+<label for="psw"><b class="codigo">El codigo de acceso se obtiene con su coordinador</b></label>
 
       </div>
 
